--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.8.1
 crispy-bootstrap4==2024.1
+dj-database-url==2.2.0
 Django==5.1.1
 django-crispy-forms==2.3
+django-environ==0.11.2
+environ==1.0
+gunicorn==23.0.0
+packaging==24.1
 pillow==10.4.0
+psycopg2-binary==2.9.9
 sqlparse==0.5.1
+typing_extensions==4.12.2
