--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
-
 {
-    "builds":[{
-        "src":"django_project/wsgi.py",
-        "use":"@vercel/python",
-        "config":{"maxLambdaSize":"15mb","runtime":"python3.12.3"}
-    }],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"django_project/wsgi.py"
-        }
-    ]
+  "routes": [
+    { "src": "/(.*)", "dest": "django_project/wsgi.py" }
+  ]
 }
