--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
+
 {
-  "routes": [
-    { "src": "/(.*)", "dest": "django_project/wsgi.py" }
-  ]
+    "builds":[{
+        "src":"django_project/wsgi.py",
+        "use":"@vercel/python",
+        "config":{"maxLambdaSize":"15mb","runtime":"python3.12.3"}
+    }],
+    "routes":[
+        {
+            "src":"/(.*)",
+            "dest":"django_project/wsgi.py"
+        }
+    ]
 }
